[package]
name = "dcs-module-ipc"
version = "0.4.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Building block to implement pull-based IPC communication into Lua modules (DLLs) for DCS World."
repository = "https://github.com/rkusa/dcs-module-ipc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
mlua = { version = "0.5", default-features = false, features = ["lua51", "serialize", "send"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"