[package]
name = "dcs-module-ipc"
version = "0.5.1"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
description = "Building block to implement pull-based IPC communication into Lua modules (DLLs) for DCS World."
repository = "https://github.com/rkusa/dcs-module-ipc"

[dependencies]
futures = "0.3"
log = "0.4"
mlua = { version = "0.6", default-features = false, features = ["lua51", "serialize", "send"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
